# eBTC

./: .gitignore  Cargo.toml  README.md  ref-nft.md
scripts/: beam-receive-c2b.sh  beam-receive.sh  beam-send-c2b.sh  beam-send.sh  mint-cip68-ref-nft.sh  mint-token.sh  ref-nft.sh
spells/: beam-receive-c2b.yaml  beam-receive.yaml  beam-send-c2b.yaml  beam-send.yaml  mint-nft.yaml  mint-token.yaml  send.yaml
src/: lib.rs  main.rs
wasm/: ebtc.wasm
